--- a/week4/pom.xml
+++ b/week4/pom.xml
@@ -56,18 +56,18 @@
         <!-- To define the plugin version in your parent POM -->
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M4</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.openclover</groupId>
-                    <artifactId>clover-maven-plugin</artifactId>
-                    <version>4.4.1</version>
-                    <configuration>
-                        <encoding>utf-8</encoding> </configuration>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                    <version>3.0.0-M4</version>-->
+<!--                </plugin>-->
+<!--                <plugin>-->
+<!--                    <groupId>org.openclover</groupId>-->
+<!--                    <artifactId>clover-maven-plugin</artifactId>-->
+<!--                    <version>4.4.1</version>-->
+<!--                    <configuration>-->
+<!--                        <encoding>utf-8</encoding> </configuration>-->
+<!--                </plugin>-->
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>2.6</version>
@@ -165,14 +165,14 @@
         </plugins>
         -->
     </build>
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.openclover</groupId>
-                <artifactId>clover-maven-plugin</artifactId>
-                <version>4.3.0</version>
-            </plugin>
-        </plugins>
-    </reporting>
+<!--    <reporting>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.openclover</groupId>-->
+<!--                <artifactId>clover-maven-plugin</artifactId>-->
+<!--                <version>4.4.1</version>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </reporting>-->
 
 </project>
